# hyper-idp

./: Cargo.toml  README.md  TEST_SSO.md  test_sso.sh
.github/workflows/: deploy.yml
assets/: wavey-128.b64
example/: Cargo.toml
example/src/: main.rs
examples/: test_auth_polling.rs  test_sso.rs
scripts/: deploy-host.sh
src/: claims.rs  client.rs  lib.rs  main.rs  oidc.rs  server.rs  session.rs  ui.rs
