[package]
name = "hyper-idp"
version = "0.1.0"
edition = "2021"
description = "oauth2 authentication server"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
http = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "1.3.1", features = ["full"] }
serde_urlencoded = "0.7.1"
reqwest = { version = "0.12.4", features = ["json"] }
tracing = "0.1.40"
hyper-util = { version = "0.1.3", features = ["full"] }
bytes = "1.5.0"
regex = "1.10.2"
http-body-util = "0.1.1"
rustls = { version = "0.21.0", features = ["quic"] }
tokio-rustls = "0.26.0"
rustls-pemfile = "2"
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }
pki-types = { package = "rustls-pki-types", version = "1.4.1" }
jsonwebtoken = "9.3.0"
serde_json = "1.0.117"
cookie = "0.18.1"
